# sym-calc

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: cd.yaml  ci.yml
wix/: main.wxs
