[package]
name = "sym-calc"
version = "0.1.0"
description = "A simple symbolic calculator written in Rust"
authors = ["Rodney Osodo <socials@rodneyosodo.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/0x6flab/sym-calc"
repository = "https://github.com/0x6flab/sym-calc"
documentation = "https://github.com/0x6flab/sym-calc"
keywords = ["math", "calculator", "symbolic", "cli"]
categories = ["command-line-utilities", "scienc", "mathematics"]
readme = "README.md"

[package.metadata.wix]
upgrade-guid = "02BAE121-2931-4D87-9BE5-43EE5FBD32F3"
path-guid = "51718BF4-F68B-4C91-A832-1B4CB742464F"
license = false
eula = false

[dependencies]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = true
